@@ -1,6 +1,7 @@
 require 'cgi'
 require 'uri'
 require 'action_controller/polymorphic_routes'
+require 'action_controller/routing_optimisation'
 
 class Object
   def to_param
@@ -255,6 +256,11 @@ module ActionController
     mattr_accessor :controller_paths
     self.controller_paths = []
     
+    # Indicates whether or not optimise the generated named
+    # route helper methods
+    mattr_accessor :optimise_named_routes
+    self.optimise_named_routes = true
+    
     # A helper module to hold URL related helpers.
     module Helpers
       include PolymorphicRoutes
@@ -325,12 +331,24 @@ module ActionController
     end
   
     class Route #:nodoc:
-      attr_accessor :segments, :requirements, :conditions
+      attr_accessor :segments, :requirements, :conditions, :optimise
       
       def initialize
         @segments = []
         @requirements = {}
         @conditions = {}
+      end
+      
+      # Indicates whether the routes should be optimised with the string interpolation
+      # version of the named routes methods.
+      def optimise?
+        @optimise
+      end
+      
+      def segment_keys
+        segments.collect do |segment|
+          segment.key if segment.respond_to? :key
+        end.compact
       end
   
       # Write and compile a +generate+ method for this Route.
@@ -381,6 +399,7 @@ module ActionController
         end
         requirement_conditions * ' && ' unless requirement_conditions.empty?
       end
+      
       def generation_structure
         segments.last.string_structure segments[0..-2]
       end
@@ -977,9 +996,15 @@ module ActionController
         requirements = assign_route_options(segments, defaults, requirements)
 
         route = Route.new
+
         route.segments = segments
         route.requirements = requirements
         route.conditions = conditions
+        
+        # Routes cannot use the current string interpolation method
+        # if there are user-supplied :requirements as the interpolation
+        # code won't raise RoutingErrors when generating
+        route.optimise = !options.key?(:requirements) && ActionController::Routing.optimise_named_routes
 
         if !route.significant_keys.include?(:action) && !route.requirements[:action]
           route.requirements[:action] = "index"
@@ -1051,7 +1076,7 @@ module ActionController
       # named routes.
       class NamedRouteCollection #:nodoc:
         include Enumerable
-
+        include ActionController::Routing::Optimisation
         attr_reader :routes, :helpers
 
         def initialize
@@ -1128,15 +1153,15 @@ module ActionController
           
           def define_url_helper(route, name, kind, options)
             selector = url_helper_name(name, kind)
-            
             # The segment keys used for positional paramters
-            segment_keys = route.segments.collect do |segment|
-              segment.key if segment.respond_to? :key
-            end.compact
+            
             hash_access_method = hash_access_name(name, kind)
             
             @module.send :module_eval, <<-end_eval # We use module_eval to avoid leaks
               def #{selector}(*args)
+
+                #{generate_optimisation_block(route, kind)}
+                
                 opts = if args.empty? || Hash === args.first
                   args.first || {}
                 else
@@ -1154,7 +1179,7 @@ module ActionController
                   #   foo_url(bar, baz, bang, :sort_by => 'baz')
                   #
                   options = args.last.is_a?(Hash) ? args.pop : {}
-                  args = args.zip(#{segment_keys.inspect}).inject({}) do |h, (v, k)|
+                  args = args.zip(#{route.segment_keys.inspect}).inject({}) do |h, (v, k)|
                     h[k] = v
                     h
                   end
@@ -1167,7 +1192,6 @@ module ActionController
             @module.send(:protected, selector)
             helpers << selector
           end
-          
       end
   
       attr_accessor :routes, :named_routes
